--- a/Maskmaker.ipynb
+++ b/Maskmaker.ipynb
@@ -73,7 +73,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "#creer un programme qui parcours l'image et son label fichier json afin de lui creer un masque en .png "
+   ]
   }
  ],
  "metadata": {
