--- a/Maskmaker.ipynb
+++ b/Maskmaker.ipynb
@@ -2,94 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: numpy in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (1.26.4)\n",
-      "Requirement already satisfied: scikit-image in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (0.22.0)\n",
-      "Requirement already satisfied: Pillow in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (10.2.0)\n",
-      "Requirement already satisfied: pandas in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (2.2.1)\n",
-      "Requirement already satisfied: tqdm in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (4.66.2)\n",
-      "Requirement already satisfied: scipy>=1.8 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from scikit-image) (1.12.0)\n",
-      "Requirement already satisfied: networkx>=2.8 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from scikit-image) (3.2.1)\n",
-      "Requirement already satisfied: imageio>=2.27 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from scikit-image) (2.34.0)\n",
-      "Requirement already satisfied: tifffile>=2022.8.12 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from scikit-image) (2024.2.12)\n",
-      "Requirement already satisfied: packaging>=21 in /Users/quentinlandon/Library/Python/3.12/lib/python/site-packages (from scikit-image) (24.0)\n",
-      "Requirement already satisfied: lazy_loader>=0.3 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from scikit-image) (0.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/quentinlandon/Library/Python/3.12/lib/python/site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from pandas) (2024.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from pandas) (2024.1)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/quentinlandon/Library/Python/3.12/lib/python/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pip install numpy scikit-image Pillow pandas tqdm \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: labelme in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (5.4.1)\n",
-      "Requirement already satisfied: numpy in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (1.26.4)\n",
-      "Requirement already satisfied: opencv-python in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (4.9.0.80)\n",
-      "Requirement already satisfied: matplotlib in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (3.8.3)\n",
-      "Requirement already satisfied: gdown in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from labelme) (5.1.0)\n",
-      "Requirement already satisfied: imgviz>=1.7.5 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from labelme) (1.7.5)\n",
-      "Requirement already satisfied: natsort>=7.1.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from labelme) (8.4.0)\n",
-      "Requirement already satisfied: onnxruntime!=1.16.0,>=1.14.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from labelme) (1.17.1)\n",
-      "Requirement already satisfied: Pillow>=2.8 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from labelme) (10.2.0)\n",
-      "Requirement already satisfied: PyYAML in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from labelme) (6.0.1)\n",
-      "Requirement already satisfied: qtpy!=1.11.2 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from labelme) (2.4.1)\n",
-      "Requirement already satisfied: scikit-image in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from labelme) (0.22.0)\n",
-      "Requirement already satisfied: termcolor in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from labelme) (2.4.0)\n",
-      "Requirement already satisfied: PyQt5!=5.15.3,!=5.15.4 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from labelme) (5.15.10)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from matplotlib) (1.2.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from matplotlib) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from matplotlib) (4.50.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from matplotlib) (1.4.5)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/quentinlandon/Library/Python/3.12/lib/python/site-packages (from matplotlib) (24.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from matplotlib) (3.1.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /Users/quentinlandon/Library/Python/3.12/lib/python/site-packages (from matplotlib) (2.9.0.post0)\n",
-      "Requirement already satisfied: coloredlogs in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from onnxruntime!=1.16.0,>=1.14.1->labelme) (15.0.1)\n",
-      "Requirement already satisfied: flatbuffers in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from onnxruntime!=1.16.0,>=1.14.1->labelme) (24.3.7)\n",
-      "Requirement already satisfied: protobuf in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from onnxruntime!=1.16.0,>=1.14.1->labelme) (5.26.0)\n",
-      "Requirement already satisfied: sympy in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from onnxruntime!=1.16.0,>=1.14.1->labelme) (1.12)\n",
-      "Requirement already satisfied: PyQt5-sip<13,>=12.13 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from PyQt5!=5.15.3,!=5.15.4->labelme) (12.13.0)\n",
-      "Requirement already satisfied: PyQt5-Qt5>=5.15.2 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from PyQt5!=5.15.3,!=5.15.4->labelme) (5.15.13)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/quentinlandon/Library/Python/3.12/lib/python/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
-      "Requirement already satisfied: beautifulsoup4 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from gdown->labelme) (4.12.3)\n",
-      "Requirement already satisfied: filelock in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from gdown->labelme) (3.13.1)\n",
-      "Requirement already satisfied: requests[socks] in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from gdown->labelme) (2.31.0)\n",
-      "Requirement already satisfied: tqdm in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from gdown->labelme) (4.66.2)\n",
-      "Requirement already satisfied: scipy>=1.8 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from scikit-image->labelme) (1.12.0)\n",
-      "Requirement already satisfied: networkx>=2.8 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from scikit-image->labelme) (3.2.1)\n",
-      "Requirement already satisfied: imageio>=2.27 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from scikit-image->labelme) (2.34.0)\n",
-      "Requirement already satisfied: tifffile>=2022.8.12 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from scikit-image->labelme) (2024.2.12)\n",
-      "Requirement already satisfied: lazy_loader>=0.3 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from scikit-image->labelme) (0.3)\n",
-      "Requirement already satisfied: soupsieve>1.2 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from beautifulsoup4->gdown->labelme) (2.5)\n",
-      "Requirement already satisfied: humanfriendly>=9.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from coloredlogs->onnxruntime!=1.16.0,>=1.14.1->labelme) (10.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from requests[socks]->gdown->labelme) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from requests[socks]->gdown->labelme) (3.6)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from requests[socks]->gdown->labelme) (2.2.1)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from requests[socks]->gdown->labelme) (2024.2.2)\n",
-      "Requirement already satisfied: PySocks!=1.5.7,>=1.5.6 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from requests[socks]->gdown->labelme) (1.7.1)\n",
-      "Requirement already satisfied: mpmath>=0.19 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from sympy->onnxruntime!=1.16.0,>=1.14.1->labelme) (1.3.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pip install labelme numpy opencv-python matplotlib\n"
    ]
@@ -104,12 +28,12 @@
     "import os\n",
     "import cv2\n",
     "import numpy as np\n",
-    "import json\n"
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -277,6 +201,9 @@
     }
    ],
    "source": [
+    "# Définition de la fonction pour convertir un fichier JSON en masque\n",
+    "\n",
+    "#----------#\n",
     "def json_to_mask(json_file):\n",
     "    with open(json_file, 'r') as f:\n",
     "        data = json.load(f)\n",
@@ -295,24 +222,30 @@
     "            cv2.fillPoly(mask, [polygon], 128)  # Par exemple, utilisez 128 pour \"numeroex\"\n",
     "        elif label == 'Enonce':\n",
     "            cv2.fillPoly(mask, [polygon], 255)  # Par exemple, utilisez 255 pour \"Enonce\"\n",
+    "        elif label == 'tab':\n",
+    "            cv2.fillPoly(mask, [polygon], 64)   # Par exemple, utilisez 64 pour \"tab\"\n",
+    "        elif label == 'img':\n",
+    "            cv2.fillPoly(mask, [polygon], 192)  # Par exemple, utilisez 192 pour \"img\"\n",
     "\n",
     "    return mask\n",
+    "#----------#\n",
     "\n",
-    "\n",
+    "#----------#\n",
     "# Chemin vers le répertoire contenant les fichiers JSON\n",
     "json_dir = '/Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/label'\n",
-    "\n",
     "# Chemin vers le répertoire contenant les images brutes associées\n",
     "img_dir = '/Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/Image'\n",
-    "\n",
     "# Chemin vers le répertoire où vous souhaitez enregistrer les masques\n",
     "mask_dir = '/Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask'\n",
+    "#----------#\n",
+    "\n",
     "\n",
     "# Assurez-vous que le répertoire pour les masques existe, sinon créez-le\n",
     "if not os.path.exists(mask_dir):\n",
     "    os.makedirs(mask_dir)\n",
     "\n",
     "# Parcours de tous les fichiers JSON dans le répertoire\n",
+    "#----------#\n",
     "for json_file in os.listdir(json_dir):\n",
     "    if json_file.startswith('LEnonce') and json_file.endswith('.json'):\n",
     "        # Obtient le numéro de fichier de l'image correspondante\n",
@@ -341,6 +274,7 @@
     "                print(f\"Erreur lors de l'enregistrement du masque : {mask_file_path}\")\n",
     "        else:\n",
     "            print(f\"Image associée non trouvée pour : {json_file}\")\n",
+    "#----------#\n",
     "\n",
     "\n"
    ]
