--- a/Maskmaker.ipynb
+++ b/Maskmaker.ipynb
@@ -9,8 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: opencv-python-headless in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (4.9.0.80)\n",
-      "Requirement already satisfied: numpy>=1.21.2 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from opencv-python-headless) (1.26.4)\n",
+      "Requirement already satisfied: opencv-python in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (4.9.0.80)\n",
+      "Requirement already satisfied: numpy in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (1.26.4)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
     "\n",
     "#----------#\n",
     "def json_to_mask(json_file):\n",
-    "    with open(json_file, 'r') as f:\n",
+    "    with open(json_file, 'r') as f: #ouvre fichier json en lecture \"r\" read\n",
     "        data = json.load(f)\n",
     "\n",
     "    # Initialise le masque avec des valeurs de pixel différentes pour chaque label\n",
