--- a/Maskmaker.ipynb
+++ b/Maskmaker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -11,17 +11,22 @@
      "text": [
       "Requirement already satisfied: opencv-python in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (4.9.0.80)\n",
       "Requirement already satisfied: numpy in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (1.26.4)\n",
+      "Requirement already satisfied: pandas in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (2.2.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/quentinlandon/Library/Python/3.12/lib/python/site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/quentinlandon/Library/Python/3.12/lib/python/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "pip install opencv-python numpy"
+    "pip install opencv-python numpy pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,12 +34,13 @@
     "import os\n",
     "import cv2\n",
     "import numpy as np\n",
-    "import json"
+    "import json\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -197,105 +203,119 @@
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce158.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce18.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce119.png\n",
-      "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce4.png\n"
+      "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce4.png\n",
+      "     Index                                  Chemin de l'image  \\\n",
+      "0        1  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
+      "1        2  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
+      "2        3  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
+      "3        4  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
+      "4        5  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
+      "..     ...                                                ...   \n",
+      "152    153  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
+      "153    154  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
+      "154    155  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
+      "155    156  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
+      "156    157  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
+      "\n",
+      "                                      Chemin du masque  \n",
+      "0    /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
+      "1    /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
+      "2    /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
+      "3    /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
+      "4    /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
+      "..                                                 ...  \n",
+      "152  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
+      "153  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
+      "154  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
+      "155  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
+      "156  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
+      "\n",
+      "[157 rows x 3 columns]\n"
      ]
     }
    ],
    "source": [
     "# Définition de la fonction pour convertir un fichier JSON en masque\n",
-    "\n",
-    "#----------#\n",
     "def json_to_mask(json_file):\n",
-    "    with open(json_file, 'r') as f: #ouvre fichier json en lecture \"r\" read\n",
+    "    with open(json_file, 'r') as f:\n",
     "        data = json.load(f)\n",
     "\n",
-    "    # Initialise le masque avec des valeurs de pixel différentes pour chaque label\n",
     "    mask = np.zeros((data['imageHeight'], data['imageWidth']), dtype=np.uint8)\n",
     "\n",
-    "    # Parcourt chaque forme dans le fichier JSON\n",
     "    for shape in data['shapes']:\n",
     "        label = shape['label']\n",
     "        points = shape['points']\n",
     "        polygon = np.array(points, dtype=np.int32)\n",
     "\n",
-    "        # Définir une valeur de pixel différente pour chaque label\n",
     "        if label == 'numeroex':\n",
-    "            cv2.fillPoly(mask, [polygon], 128)  # Par exemple, utilisez 128 pour \"numeroex\"\n",
+    "            cv2.fillPoly(mask, [polygon], 128)\n",
     "        elif label == 'Enonce':\n",
-    "            cv2.fillPoly(mask, [polygon], 255)  # Par exemple, utilisez 255 pour \"Enonce\"\n",
+    "            cv2.fillPoly(mask, [polygon], 255)\n",
     "        elif label == 'tab':\n",
-    "            cv2.fillPoly(mask, [polygon], 64)   # Par exemple, utilisez 64 pour \"tab\"\n",
+    "            cv2.fillPoly(mask, [polygon], 64)\n",
     "        elif label == 'img':\n",
-    "            cv2.fillPoly(mask, [polygon], 192)  # Par exemple, utilisez 192 pour \"img\"\n",
+    "            cv2.fillPoly(mask, [polygon], 192)\n",
     "\n",
     "    return mask\n",
-    "#----------#\n",
     "\n",
-    "#----------#\n",
-    "# Chemin vers le répertoire contenant les fichiers JSON\n",
+    "# Chemins vers les répertoires\n",
     "quentin_JSON = '/Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/label'\n",
-    "# Chemin vers le répertoire contenant les images brutes associées\n",
     "quentin_BRUT = '/Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/Image'\n",
-    "# Chemin vers le répertoire où vous souhaitez enregistrer les masques\n",
     "quentin_mask = '/Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask'\n",
     "\n",
     "theo_JSON = '/Users/theolambs/APP_IA_TL_QL_dev/data/label'\n",
     "theo_BRUT = '/Users/theolambs/APP_IA_TL_QL_dev/data/Image'\n",
     "theo_mask = '/Users/theolambs/APP_IA_TL_QL_dev/data/mask'\n",
     "\n",
-    "#Choix de l'utilisateur\n",
-    "utilisateur = int(input(\"si quentin tape 0, si theo tape 1\"))\n",
+    "utilisateur = int(input(\"si quentin tape 0, si theo tape 1: \"))\n",
     "\n",
     "if utilisateur == 0:\n",
     "    json_dir = quentin_JSON\n",
     "    img_dir = quentin_BRUT\n",
     "    mask_dir = quentin_mask\n",
-    "else :\n",
+    "else:\n",
     "    json_dir = theo_JSON\n",
     "    img_dir = theo_BRUT\n",
     "    mask_dir = theo_mask\n",
     "\n",
-    "#----------#\n",
-    "\n",
-    "\n",
-    "# Assurez-vous que le répertoire pour les masques existe, sinon ça le crée \n",
+    "# Assurez-vous que le répertoire pour les masques existe, sinon ça le crée\n",
     "if not os.path.exists(mask_dir):\n",
     "    os.makedirs(mask_dir)\n",
     "\n",
+    "# Liste pour stocker les informations sur chaque masque\n",
+    "data_info = []  # Initialisation de la liste des informations à inclure dans le DataFrame\n",
+    "index_counter = 1  # Initialisation du compteur d'index\n",
+    "\n",
     "# Parcours de tous les fichiers JSON dans le répertoire\n",
-    "#----------#\n",
     "for json_file in os.listdir(json_dir):\n",
-    "  \n",
     "    if json_file.startswith('LEnonce') and json_file.endswith('.json'):\n",
-    "        # Obtient le numéro de fichier de l'image correspondante\n",
     "        image_number = json_file[7:-5]  # Supprime \"LEnonce\" du début et \".json\" de la fin\n",
-    "        \n",
-    "        # Crée le nom de fichier de l'image\n",
     "        img_filename = f'Enonce{image_number}.png'\n",
-    "        \n",
-    "        # Chemin complet vers le fichier d'image\n",
     "        img_path = os.path.join(img_dir, img_filename)\n",
-    "        \n",
-    "        # Vérifie si l'image associée existe\n",
+    "\n",
     "        if os.path.exists(img_path):\n",
-    "            # Convertit le fichier JSON en masque\n",
     "            mask = json_to_mask(os.path.join(json_dir, json_file))\n",
-    "            \n",
-    "            # Enregistre le masque avec le même nom que le fichier JSON\n",
     "            mask_filename = 'M' + os.path.splitext(json_file)[0] + '.png'\n",
     "            mask_file_path = os.path.join(mask_dir, mask_filename)\n",
     "            cv2.imwrite(mask_file_path, mask)\n",
-    "            \n",
-    "            # Vérifie si le fichier de masque a été correctement enregistré\n",
+    "\n",
     "            if os.path.exists(mask_file_path):\n",
     "                print(f\"Masque enregistré avec succès : {mask_file_path}\")\n",
+    "                data_info.append([index_counter, img_path, mask_file_path])#enregistrement dans la liste data_info (num, pathimg, pathmask)\n",
+    "                index_counter += 1  # Incrémentation du compteur d'index\n",
     "            else:\n",
     "                print(f\"Erreur lors de l'enregistrement du masque : {mask_file_path}\")\n",
     "        else:\n",
     "            print(f\"Image associée non trouvée pour : {json_file}\")\n",
-    "#----------#\n",
     "\n",
-    "\n"
+    "# Création du DataFrame à partir des informations collectées liste data_info + titre colonne\n",
+    "df = pd.DataFrame(data_info, columns=['Index', 'Chemin de l\\'image', 'Chemin du masque'])\n",
+    "\n",
+    "# Enregistrement du DataFrame au format CSV\n",
+    "df.to_csv('informations_masques.csv', index=False)\n",
+    "\n",
+    "# Affichage du DataFrame\n",
+    "print(df)\n"
    ]
   }
  ],
