--- a/Maskmaker.ipynb
+++ b/Maskmaker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -53,6 +53,7 @@
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce161.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce99.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce76.png\n",
+      "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce21.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce120.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce7.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce83.png\n",
@@ -101,10 +102,12 @@
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce126.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce1.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce127.png\n",
+      "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce26.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce71.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce166.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce88.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce67.png\n",
+      "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce131.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce30.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce47.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce146.png\n",
@@ -115,7 +118,9 @@
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce150.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce92.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce84.png\n",
+      "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce44.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce145.png\n",
+      "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce13.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce112.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce104.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce52.png\n",
@@ -128,6 +133,7 @@
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce169.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce149.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce3.png\n",
+      "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce48.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce108.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce124.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce25.png\n",
@@ -141,6 +147,7 @@
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce65.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce164.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce73.png\n",
+      "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce24.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce125.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce109.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce2.png\n",
@@ -151,10 +158,12 @@
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce86.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce90.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce129.png\n",
+      "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce28.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce152.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce53.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce105.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce113.png\n",
+      "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce12.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce144.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce45.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce5.png\n",
@@ -178,7 +187,9 @@
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce54.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce155.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce78.png\n",
+      "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce97.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce81.png\n",
+      "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce39.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce138.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce139.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce38.png\n",
@@ -189,6 +200,7 @@
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce55.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce103.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce115.png\n",
+      "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce14.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce142.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce8.png\n",
       "Masque enregistré avec succès : /Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask/MLEnonce43.png\n",
@@ -211,11 +223,11 @@
       "3        4  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
       "4        5  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
       "..     ...                                                ...   \n",
-      "152    153  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
-      "153    154  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
-      "154    155  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
-      "155    156  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
-      "156    157  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
+      "164    165  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
+      "165    166  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
+      "166    167  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
+      "167    168  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
+      "168    169  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...   \n",
       "\n",
       "                                      Chemin du masque  \n",
       "0    /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
@@ -224,13 +236,13 @@
       "3    /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
       "4    /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
       "..                                                 ...  \n",
-      "152  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
-      "153  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
-      "154  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
-      "155  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
-      "156  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
+      "164  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
+      "165  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
+      "166  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
+      "167  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
+      "168  /Users/quentinlandon/Desktop/GIT_Projet_theo/A...  \n",
       "\n",
-      "[157 rows x 3 columns]\n"
+      "[169 rows x 3 columns]\n"
      ]
     }
    ],
