--- a/Modeltrain_Unet.ipynb
+++ b/Modeltrain_Unet.ipynb
@@ -1,235 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "97.60s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n",
-      "Collecting tensorflow\n",
-      "  Downloading tensorflow-2.16.1-cp312-cp312-macosx_12_0_arm64.whl.metadata (4.1 kB)\n",
-      "Collecting sklearn\n",
-      "  Downloading sklearn-0.0.post12.tar.gz (2.6 kB)\n",
-      "  Installing build dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25lerror\n",
-      "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
-      "  \n",
-      "  \u001b[31m×\u001b[0m \u001b[32mGetting requirements to build wheel\u001b[0m did not run successfully.\n",
-      "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
-      "  \u001b[31m╰─>\u001b[0m \u001b[31m[15 lines of output]\u001b[0m\n",
-      "  \u001b[31m   \u001b[0m The 'sklearn' PyPI package is deprecated, use 'scikit-learn'\n",
-      "  \u001b[31m   \u001b[0m rather than 'sklearn' for pip commands.\n",
-      "  \u001b[31m   \u001b[0m \n",
-      "  \u001b[31m   \u001b[0m Here is how to fix this error in the main use cases:\n",
-      "  \u001b[31m   \u001b[0m - use 'pip install scikit-learn' rather than 'pip install sklearn'\n",
-      "  \u001b[31m   \u001b[0m - replace 'sklearn' by 'scikit-learn' in your pip requirements files\n",
-      "  \u001b[31m   \u001b[0m   (requirements.txt, setup.py, setup.cfg, Pipfile, etc ...)\n",
-      "  \u001b[31m   \u001b[0m - if the 'sklearn' package is used by one of your dependencies,\n",
-      "  \u001b[31m   \u001b[0m   it would be great if you take some time to track which package uses\n",
-      "  \u001b[31m   \u001b[0m   'sklearn' instead of 'scikit-learn' and report it to their issue tracker\n",
-      "  \u001b[31m   \u001b[0m - as a last resort, set the environment variable\n",
-      "  \u001b[31m   \u001b[0m   SKLEARN_ALLOW_DEPRECATED_SKLEARN_PACKAGE_INSTALL=True to avoid this error\n",
-      "  \u001b[31m   \u001b[0m \n",
-      "  \u001b[31m   \u001b[0m More information is available at\n",
-      "  \u001b[31m   \u001b[0m https://github.com/scikit-learn/sklearn-pypi-package\n",
-      "  \u001b[31m   \u001b[0m \u001b[31m[end of output]\u001b[0m\n",
-      "  \n",
-      "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
-      "\u001b[?25h\u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
-      "\n",
-      "\u001b[31m×\u001b[0m \u001b[32mGetting requirements to build wheel\u001b[0m did not run successfully.\n",
-      "\u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
-      "\u001b[31m╰─>\u001b[0m See above for output.\n",
-      "\n",
-      "\u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install tensorflow "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tensorflow'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcv2\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mtf\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
-     ]
-    }
-   ],
-   "source": [
-    "import cv2\n",
-    "import os\n",
-    "import tensorflow as tf\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "dir_img=\"/Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/Image\"\n",
-    "dir_mask=\"/Users/quentinlandon/Desktop/GIT_Projet_theo/APP_IA_TL_QL_dev/data/mask\"\n",
-    "\n",
-    "width=160\n",
-    "height=120\n",
-    "\n",
-    "taille_batch=50\n",
-    "nbr_entrainement=100\n",
-    "\n",
-    "def convolution(input, taille_noyau, nbr_cc, stride, b_norm=False, f_activation=None, training=False):\n",
-    "    w=tf.Variable(tf.random.truncated_normal(shape=(taille_noyau, taille_noyau, int(input.get_shape()[-1]), nbr_cc)))\n",
-    "    b=np.zeros(nbr_cc)\n",
-    "    result=tf.nn.conv2d(input, w, strides=[1, stride, stride, 1], padding='SAME')\n",
-    "    result=tf.nn.bias_add(result, b)\n",
-    "    if b_norm is True:\n",
-    "        result=tf.layers.batch_normalization(result, training=training)\n",
-    "    if f_activation is not None:\n",
-    "        result=f_activation(result)\n",
-    "    return result\n",
-    "\n",
-    "def deconvolution(input, taille_noyau, nbr_cc, stride, b_norm=False, f_activation=None, training=False):\n",
-    "    w=tf.Variable(tf.random.truncated_normal(shape=(taille_noyau, taille_noyau, nbr_cc, int(input.get_shape()[-1]))))\n",
-    "    b=np.zeros(nbr_cc)\n",
-    "    out_h=int(input.get_shape()[1])*stride\n",
-    "    out_w=int(input.get_shape()[2])*stride\n",
-    "    b_size=tf.shape(input)[0]\n",
-    "    result=tf.nn.conv2d_transpose(input, w, output_shape=[b_size, out_h, out_w, nbr_cc], strides=[1, stride, stride, 1], padding='SAME')\n",
-    "    result=tf.nn.bias_add(result, b)\n",
-    "    if b_norm is True:\n",
-    "        result=tf.layers.batch_normalization(result, training=training)\n",
-    "    if f_activation is not None:\n",
-    "        result=f_activation(result)\n",
-    "    return result\n",
-    "\n",
-    "def unet(nbr_mask, size, learning_rate=1E-3):\n",
-    "    ph_images=tf.placeholder(shape=(None, size[0], size[1], size[2]), dtype=tf.float32, name='entree')\n",
-    "    ph_masks=tf.placeholder(shape=(None, size[0], size[1], nbr_mask), dtype=tf.float32)\n",
-    "    ph_is_training=tf.placeholder_with_default(False, (), name='is_training')\n",
-    "\n",
-    "    result=convolution(ph_images, 3, 16, 1, True, tf.nn.relu, ph_is_training)\n",
-    "    c1=convolution(result, 3, 16, 1, True, tf.nn.relu, ph_is_training)\n",
-    "    result=tf.nn.max_pool(c1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='SAME')\n",
-    "\n",
-    "    result=convolution(result, 3, 32, 1, True, tf.nn.relu, ph_is_training)\n",
-    "    c2=convolution(result, 3, 32, 1, True, tf.nn.relu, ph_is_training)\n",
-    "    result=tf.nn.max_pool(c2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='SAME')\n",
-    "\n",
-    "    result=convolution(result, 3, 64, 1, True, tf.nn.relu, ph_is_training)\n",
-    "    c3=convolution(result, 3, 64, 1, True, tf.nn.relu, ph_is_training)\n",
-    "    result=tf.nn.max_pool(c3, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='SAME')\n",
-    "\n",
-    "    result=convolution(result, 3, 128, 1, True, tf.nn.relu, ph_is_training)\n",
-    "    result=convolution(result, 3, 128, 1, True, tf.nn.relu, ph_is_training)\n",
-    "\n",
-    "    d3=deconvolution(result, 3, 128, 2, True, tf.nn.relu, ph_is_training)\n",
-    "    result=tf.concat((d3, c3), axis=3)\n",
-    "    \n",
-    "    result=convolution(result, 3, 64, 1, True, tf.nn.relu, ph_is_training)\n",
-    "    result=convolution(result, 3, 64, 1, True, tf.nn.relu, ph_is_training)\n",
-    "\n",
-    "    d2=deconvolution(result, 3, 64, 2, True, tf.nn.relu, ph_is_training)\n",
-    "    result=tf.concat((d2, c2), axis=3)\n",
-    "\n",
-    "    result=convolution(result, 3, 32, 1, True, tf.nn.relu, ph_is_training)\n",
-    "    result=convolution(result, 3, 32, 1, True, tf.nn.relu, ph_is_training)\n",
-    "\n",
-    "    d1=deconvolution(result, 3, 32, 2, True, tf.nn.relu, ph_is_training)\n",
-    "    result=tf.concat((d1, c1), axis=3)\n",
-    "\n",
-    "    result=convolution(result, 3, 16, 1, True, tf.nn.relu, ph_is_training)\n",
-    "    result=convolution(result, 3, 16, 1, True, tf.nn.relu, ph_is_training)\n",
-    "\n",
-    "    result=convolution(result, 1, nbr_mask, 1, False, None, ph_is_training)\n",
-    "    \n",
-    "    mask=tf.nn.sigmoid(result, name=\"sortie\")\n",
-    "    loss=tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(labels=ph_masks, logits=result))\n",
-    "    accuracy=tf.reduce_mean(tf.cast(tf.equal(tf.round(mask), ph_masks), tf.float32))\n",
-    "        \n",
-    "    extra_update_ops=tf.get_collection(tf.GraphKeys.UPDATE_OPS)\n",
-    "    with tf.control_dependencies(extra_update_ops):\n",
-    "        train=tf.train.AdamOptimizer(learning_rate).minimize(loss)\n",
-    "\n",
-    "    return ph_images, ph_masks, ph_is_training, mask, train, accuracy, tf.train.Saver()\n",
-    "    \n",
-    "ph_images, ph_masks, ph_is_training, mask, train, accuracy, saver=unet(2, (height, width, 3))\n",
-    "\n",
-    "tab_img=[]\n",
-    "tab_mask=[]\n",
-    "#for dir in ['dataA/', 'dataB/', 'dataC/', 'dataD/', 'dataE/']:\n",
-    "for dir in ['dataA/', 'dataB/', 'dataC/', 'dataD/']:\n",
-    "    for file in os.listdir(dir+dir_img):\n",
-    "        tab_img.append(cv2.resize(cv2.imread(dir+dir_img+file), (width, height))/255)\n",
-    "        img_mask=cv2.resize(cv2.imread(dir+dir_mask+file), (width, height))[:,:,2]\n",
-    "        img_mask_result=np.zeros(shape=(height, width, 2), dtype=np.float32)\n",
-    "        img_mask_result[:,:,0][img_mask==7]=1.\n",
-    "        img_mask_result[:,:,1][img_mask==9]=1.\n",
-    "        tab_mask.append(img_mask_result)\n",
-    "        if False:\n",
-    "            cv2.imshow(\"mask 7\", img_mask_result[:,:,0]*255)\n",
-    "            cv2.imshow(\"mask 9\", img_mask_result[:,:,1]*255)\n",
-    "            key=cv2.waitKey()&0xFF\n",
-    "            if key==ord('q'):\n",
-    "                quit()\n",
-    "\n",
-    "tab_img=np.array(tab_img)\n",
-    "tab_mask=np.array(tab_mask)\n",
-    "\n",
-    "train_images, test_images, train_labels, test_labels=train_test_split(tab_img, tab_mask, test_size=.05)\n",
-    "\n",
-    "with tf.Session() as s:\n",
-    "    s.run(tf.global_variables_initializer())\n",
-    "    tab_train=[]\n",
-    "    tab_test=[]\n",
-    "    for id_entrainement in np.arange(nbr_entrainement):\n",
-    "        print(\"> Entrainement\", id_entrainement)\n",
-    "        for batch in np.arange(0, len(train_images), taille_batch):\n",
-    "            s.run(train, feed_dict={\n",
-    "                ph_images: train_images[batch:batch+taille_batch],\n",
-    "                ph_masks: train_labels[batch:batch+taille_batch],\n",
-    "                ph_is_training: True\n",
-    "            })\n",
-    "        print(\"  entrainement OK\")\n",
-    "        tab_accuracy_train=[]\n",
-    "        for batch in np.arange(0, len(train_images), taille_batch):\n",
-    "            p=s.run(accuracy, feed_dict={\n",
-    "                ph_images: train_images[batch:batch+taille_batch],\n",
-    "                ph_masks: train_labels[batch:batch+taille_batch]\n",
-    "            })\n",
-    "            tab_accuracy_train.append(p)\n",
-    "        print(\"  train:\", np.mean(tab_accuracy_train))\n",
-    "        tab_accuracy_test=[]\n",
-    "        for batch in np.arange(0, len(test_images), taille_batch):\n",
-    "            p=s.run(accuracy, feed_dict={\n",
-    "                ph_images: test_images[batch:batch+taille_batch],\n",
-    "                ph_masks: test_labels[batch:batch+taille_batch]\n",
-    "            })\n",
-    "            tab_accuracy_test.append(p)\n",
-    "        print(\"  test :\", np.mean(tab_accuracy_test))\n",
-    "        tab_train.append(1-np.mean(tab_accuracy_train))\n",
-    "        tab_test.append(1-np.mean(tab_accuracy_test))\n",
-    "    saver.save(s, './mon_modele/modele')"
-   ]
-  }
- ],
+ "cells": [],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
